--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link href="style_b.css" type="text/css" rel="stylesheet" />
+    <link href="style.css" type="text/css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--  used claude.ai to help with responsive design on mobile devices  -->
   </head>
   
