--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <link href="style.css" type="text/css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--  used claude.ai to help with responsive design on mobile devices  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   </head>
   
   <body>
